# pptlint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SKILL.md  THIRD_PARTY_NOTICES.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  challenge-check.yml  false-positive.yml  integrate-generator.yml  submit-sample.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
benchmark/: README.md  benchmark.json  run-manifest-v1.schema.json  run-plan.json
benchmark/editing/: README.md  case-v1.schema.json  cases.json  run-plan.json  sources.json
benchmark/editing/baseline/: README.md  source-inventory.json
benchmark/editing/results/: README.md  pptlint-1.3.1-representative-baseline.json  pptlint-guidance-optimized.json  pptlint-guidance-optimized.md  pptlint-local-app-performance.json
benchmark/tasks/launch-cn/: brand.json  brief.md
benchmark/tasks/qbr-cn/: brief.md  metrics.csv
benchmark/tasks/technical-en/: source.md
docs/: agent-repair-loop.md  migration-from-decklint.md  publishing.md
docs/superpowers/plans/: 2026-07-11-v02-proof-loop.md
docs/superpowers/specs/: 2026-07-11-v02-proof-loop-design.md
examples/: bad-deck.pptx  good-deck.pptx
examples/proof-loop/: README.md  after.pptx  before.pptx
examples/reports/: bad-deck.html  bad-deck.json  good-deck.html  good-deck.json
schema/: decklint-comparison-v1.schema.json  decklint-report-v1.schema.json  pptlint-repair-plan-v1.schema.json  pptlint-repair-receipt-v1.schema.json  pptlint-repair-verification-v1.schema.json  pptlint-report-v2.schema.json  pptlint-verified-v1.schema.json
site/: index.html  robots.txt  shared.css  shared.js  sitemap.xml
site/benchmark/: index.html
site/lab/: cases.json  index.html  lab.css  lab.js
site/lab/cases/: bloated-media.html  brand-policy.html  broken-package.html  clipped-last-line.html  external-file-link.html  flattened-slide.html  font-portability.html  hidden-slide-metadata.html  low-contrast-projector.html  meeting-room-small-text.html  overlapping-text.html  speaker-notes-leak.html
site/proof-loop/: after.html  after.json  before.html  before.json  comparison.html  comparison.json
specs/promotion-aligned-v04/: design.md  requirements.md  tasks.md
specs/verified-delivery-v1/: design.md  requirements.md  tasks.md
src/decklint/: __init__.py  __main__.py  cleanup.py  cli.py  comparison.py  comparison_report.py  compat.py  local_app.py  model.py  policy.py  readiness.py  render.py  repair_catalog.py  repair_plan.py  repair_verification.py  report.py  rules.py  schema.py  scoring.py
src/pptlint/: __init__.py  __main__.py  benchmark.py  cli.py  comparison.py  comparison_report.py  edit_eval.py  model.py  policy.py  readiness.py  render.py  report.py  rules.py  schema.py  scoring.py
tests/: pptx_factory.py  report_factory.py  test_ai_generated_titles.py  test_benchmark.py  test_case_lab.py  test_cleanup.py  test_cli.py  test_comparison.py  test_comparison_report.py  test_edit_eval.py  test_local_app.py  test_malformed_inputs.py  test_model_and_scoring.py  test_policy_and_plan.py  test_pptlint_v2_contract.py  test_public_contract.py  test_public_proof_sync.py  test_public_sample_validation.py  test_real_office_integration.py  test_release_consistency.py  test_render_and_report.py  test_repair_plan.py  test_rules.py
tests/fixtures/corpus/: aspect-01.pptx  aspect-02.pptx  aspect-03.pptx  aspect-04.pptx  aspect-05.pptx  blank-01.pptx  clean-01.pptx  clean-02.pptx  clean-03.pptx  clean-04.pptx  clean-05.pptx  clean-06.pptx  clean-07.pptx  clean-08.pptx  clean-09.pptx  clean-10.pptx  clean-11.pptx  clean-12.pptx  clean-13.pptx  clean-14.pptx  clean-15.pptx  clean-16.pptx  clean-17.pptx  clean-18.pptx  clean-19.pptx  clean-20.pptx  clipping-01.pptx  clipping-02.pptx  clipping-03.pptx  clipping-04.pptx  clipping-05.pptx  comments-05.pptx  (+48 more)
tools/: benchmark.py  build_case_lab.py  build_public_proof.py  build_release_notes.py  check_public_proof.py  check_public_site.py  check_release_consistency.py  edit_eval.py  generate_examples.py  generate_public_proof.py  generate_test_corpus.py  validate_public_samples.py
validation/: README.md  public-sample-sources.json  public-sample-validation.json
