[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pptlint"
version = "0.6.0"
description = "Open-source PPT/PPTX preflight checks for AI-generated PowerPoint files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kdnsna" }]
dependencies = [
  "defusedxml>=0.7.1,<1",
  "Pillow>=10,<13",
  "pypdfium2>=4.30,<6",
  "PyYAML>=6,<7",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Office Suites",
]

[project.scripts]
pptlint = "pptlint.cli:main"
decklint = "decklint.compat:main"

[project.urls]
Homepage = "https://github.com/kdnsna/pptlint"
Repository = "https://github.com/kdnsna/pptlint"
Issues = "https://github.com/kdnsna/pptlint/issues"
Documentation = "https://kdnsna.github.io/pptlint/"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "jsonschema>=4.23,<5",
  "pytest>=8,<10",
  "python-pptx>=1.0,<2",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pptlint", "src/decklint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 110
